# otus-cloud-setup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bootstrap/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
infra/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
