[project]
name = "otus_hw_2"
version = "0.1.0"
description = "Data Proccessing, second homework"
authors = [
    { name = "Arthur Kaplanov" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "pyarrow",
    "loguru",
    "matplotlib",
    "seaborn",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "isort",
    "black",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=src --cov-report=term-missing"